fixing the alignment for the trash button

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -35,12 +35,17 @@ body{
 }
 
 .remove-button{
-    float: right;
+    margin-left: 200px;
 }
 
-.clearfix::after {
-    content: "";
-    clear: both;
-    display: table;
+.clearfix{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.task-item{
+    width: 400px;
+    text-align: center;
 }
 
